@@ -1,3 +1,7 @@
+2007-02-14 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCC.y: fixed bug #1291133: duplicate members across enum(s)
+
 2007-02-12 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCicode.c (geniCodeAssign): return (itemp) right instead of left
